# ATS

./: .gitignore  README.md  pyproject.toml
code/: DEPLOYMENT.md  README.md
code/Data_Collectors/: leetcode_collector.py  simple_github_collector.py  stackoverflow_collector.py
code/GitHub Profiling (TEST)/: Profile_Clustering.ipynb  Profile_Clustering.py
code/ML/Selection_Algorithms/: GitHub_Selection_Algo.ipynb  GitHub_Unseen.ipynb  LeetCode_Selection_algo.ipynb  LeetCode_Selection_algo.py  Leetcode_Unseen.ipynb  StackOverFlow_Selection_algo.ipynb  StackOverFlow_Selection_algo.py  StackOverflow_Unseen.ipynb  github_model.pkl  github_selection_algo.py  leetcode_model.pkl  stackoverflow_model.pkl
code/ML/Shortlisted_candidates/: GitHub_Predictions_Results(Unseen).csv  LeetCode_Predictions_Results(Unseen).csv  StackOverflow_Predictions_Results(Unseen).csv  github_shortlisted_candidates.csv  leetcode_shortlisted_candidates.csv  stackoverflow_shortlisted_candidates.csv
code/Profile_Data/: GitHub_Data_Unseen.csv  Github_Profiles.csv  Github_Profiles.xlsx  LeetCode_Data_Unseen.csv  StackOverFlow_Data_Unseen.csv  StackOverflow-20K-Formatted.csv  StackOverflow-20K-Formatted.xlsx  leetcode_profiles.csv
code/UI/: app.py
code/UI/services/: api.py
code/UI/views/candidate/: __init__.py  dashboard.py  submission.py
code/UI/views/recruiter/: __init__.py  dashboard.py
code/backend/: main.py  migrate_db.py  setup_db.py
code/database/: database.db  database.py
